--- a/Udemy/JavaSpring/guess-the-number-game-spring-boot/web/src/main/resources/templates/home.html
+++ b/Udemy/JavaSpring/guess-the-number-game-spring-boot/web/src/main/resources/templates/home.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head id="headId">
     <meta charset="UTF-8">
-    <title>Guess the Number Game</title>
+    <title>Title content</title>
 </head>
 <body>
     <div align="center">
-        <h1>Welcome to the Number Game</h1>
-        <a th:href="play" th:text="Play">Click to play</a>
+        <h1>Welcome to Guess the Number Game</h1>
+        <h3>
+            <a id="play-link" href="play.html">Click to play</a>
+        </h3>
+
+        <footer id="footerId">
+            <p>Footer text</p>
+        </footer>
     </div>
 </body>
 </html>
